Correctly wrap evnt state badges

--- a/symlink_stuff/files/theme-sac-pilatus/scss/components/_mod_calendar.scss
+++ b/symlink_stuff/files/theme-sac-pilatus/scss/components/_mod_calendar.scss
@@ -36,7 +36,8 @@
   @include transition(background-color);
   border: 1px solid $gray-200;
 
-  .event-list-badge-wrapper {
+
+  .event-list-date-badge-wrapper {
     min-width: 50px;
     width: 50px;
     height: 50px;
@@ -51,9 +52,12 @@
     }
   }
 
+  .badge-container .badge {
+    margin-right: 4px;
+  }
+
   .last-minute-tour {
     color: $green;
-    //font-size: $font-size-sm;
   }
 }
 
@@ -70,7 +74,6 @@
 
     .last-minute-tour {
       color: $green;
-      //font-size: $font-size-sm;
     }
   }
 }
